# ainakan-gum

./: README.md  meson.build  meson.options
.github/workflows/: ci.yml
bindings/gumjs/: generate-bindings.py  generate-runtime.py  gumcmodule.c  gumcmodule.h  guminspectorserver.c  gumquickcmodule.c  gumquickcompile.c  gumquickcore.c  gumquickscript.c  gumquickscriptbackend.c  gumscriptscheduler.c  gumv8cmodule.cpp  gumv8core.cpp  gumv8script.cpp  gumv8scriptbackend.cpp  meson.build
bindings/gumjs/devkit/: meson.build
bindings/gumjs/runtime/: message-dispatcher.js  worker.js
bindings/gumpp/: gumpp-static.filters  meson.build
docs/: config.toml
ext/dbghelp/: meson.build
ext/symsrv/: meson.build
gum/: gum.c  gumcloak.c  gumdarwingrafter.c  gumdefs.h  gumprintf.c  meson.build
gum/backend-arm64/: guminterceptor-arm64.c  gumstalker-arm64.c
gum/backend-darwin/: gumcodesegment-darwin.c  gumdarwinmapper.c  gumdarwinsymbolicator.c
gum/backend-linux/: gumandroid.c  gumprocess-linux.c
gum/devkit/: meson.build
libs/gum/heap/: meson.build
libs/gum/prof/: meson.build
subprojects/: capstone.wrap  glib-networking.wrap  glib.wrap  json-glib.wrap  libdwarf.wrap  libffi.wrap  libsoup.wrap  libunwind.wrap  minizip-ng.wrap  openssl.wrap  quickjs.wrap  sqlite.wrap  tinycc.wrap  v8.wrap  xz.wrap
tests/: gum-tests.plist  gum-tests.xcent  gumtest.c  run-android.sh  run-corellium.sh  run-ios.sh  run-mapper-ios.sh  run-qnx.sh  sign.sh  testutil.c
tests/core/: interceptor-darwin.c  interceptor.c  mapper.c  process.c  threadregistry.c
tests/core/arch-arm/: stalker-arm.c
tests/core/arch-arm64/: stalker-arm64.c
tests/core/arch-x86/: stalker-x86.c
tests/core/swiftapiresolver/: mkflamegraph.sh  run.py  runner.c
tests/core/targetfunctions/: Makefile  rebuild.sh
tests/gumjs/: script.c
tests/heap/: allocatorprobex.cxx
tests/prof/: profiler.c  sampler.c
tools/: detect-version.py
vapi/: ainakan-gum-1.0.vapi  ainakan-gum-heap-1.0.vapi  meson.build
